core/influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit_mut__test__select_statement-6.snap
---
source: influxdb_influxql_parser/src/visit_mut.rs
expression: "visit_statement!(r#\"SELECT value FROM (SELECT usage FROM cpu WHERE host = \"node1\")\n            WHERE region =~ /west/ AND value > 5\n            GROUP BY TIME(5m), host\n            FILL(previous)\n            ORDER BY TIME DESC\n            LIMIT 1 OFFSET 2\n            SLIMIT 3 SOFFSET 4\n            TZ('Australia/Hobart')\n        \"#)"
snapshot_kind: text
---
- pre_visit_statement
- pre_visit_select_statement
- pre_visit_select_field_list
- pre_visit_select_field
- pre_visit_expr
- pre_visit_var_ref
- post_visit_var_ref
- post_visit_expr
- post_visit_select_field
- post_visit_select_field_list
- pre_visit_select_from_clause
- pre_visit_select_measurement_selection
- pre_visit_select_statement
- pre_visit_select_field_list
- pre_visit_select_field
- pre_visit_expr
- pre_visit_var_ref
- post_visit_var_ref
- post_visit_expr
- post_visit_select_field
- post_visit_select_field_list
- pre_visit_select_from_clause
- pre_visit_select_measurement_selection
- pre_visit_qualified_measurement_name
- pre_visit_measurement_name
- post_visit_measurement_name
- post_visit_qualified_measurement_name
- post_visit_select_measurement_selection
- post_visit_select_from_clause
- pre_visit_where_clause
- pre_visit_conditional_expression
- pre_visit_conditional_binary
- pre_visit_conditional_expression
- pre_visit_expr
- pre_visit_var_ref
- post_visit_var_ref
- post_visit_expr
- post_visit_conditional_expression
- pre_visit_conditional_expression
- pre_visit_expr
- pre_visit_var_ref
- post_visit_var_ref
- post_visit_expr
- post_visit_conditional_expression
- post_visit_conditional_binary
- post_visit_conditional_expression
- post_visit_where_clause
- post_visit_select_statement
- post_visit_select_measurement_selection
- post_visit_select_from_clause
- pre_visit_where_clause
- pre_visit_conditional_expression
- pre_visit_conditional_binary
- pre_visit_conditional_expression
- pre_visit_conditional_binary
- pre_visit_conditional_expression
- pre_visit_expr
- pre_visit_var_ref
- post_visit_var_ref
- post_visit_expr
- post_visit_conditional_expression
- pre_visit_conditional_expression
- pre_visit_expr
- pre_visit_literal
- post_visit_literal
- post_visit_expr
- post_visit_conditional_expression
- post_visit_conditional_binary
- post_visit_conditional_expression
- pre_visit_conditional_expression
- pre_visit_conditional_binary
- pre_visit_conditional_expression
- pre_visit_expr
- pre_visit_var_ref
- post_visit_var_ref
- post_visit_expr
- post_visit_conditional_expression
- pre_visit_conditional_expression
- pre_visit_expr
- pre_visit_literal
- post_visit_literal
- post_visit_expr
- post_visit_conditional_expression
- post_visit_conditional_binary
- post_visit_conditional_expression
- post_visit_conditional_binary
- post_visit_conditional_expression
- post_visit_where_clause
- pre_visit_group_by_clause
- pre_visit_select_dimension
- pre_visit_select_time_dimension
- pre_visit_expr
- pre_visit_literal
- post_visit_literal
- post_visit_expr
- post_visit_select_time_dimension
- post_visit_select_dimension
- pre_visit_select_dimension
- post_visit_select_dimension
- post_visit_group_by_clause
- pre_visit_fill_clause
- post_visit_fill_clause
- pre_visit_order_by_clause
- post_visit_order_by_clause
- pre_visit_limit_clause
- post_visit_limit_clause
- pre_visit_offset_clause
- post_visit_offset_clause
- pre_visit_slimit_clause
- post_visit_slimit_clause
- pre_visit_soffset_clause
- post_visit_soffset_clause
- pre_visit_timezone_clause
- post_visit_timezone_clause
- post_visit_select_statement
- post_visit_statement
