core/influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit_mut__test__show_field_keys_statement-2.snap
---
source: influxdb_influxql_parser/src/visit_mut.rs
expression: "visit_statement!(\"SHOW FIELD KEYS ON telegraf\")"
snapshot_kind: text
---
- pre_visit_statement
- pre_visit_show_field_keys_statement
- pre_visit_on_clause
- post_visit_on_clause
- post_visit_show_field_keys_statement
- post_visit_statement
